<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PressedTodoActivity"
    android:id="@+id/activity_pressed_todo">

    <TextView
        android:id="@+id/pressed_todo_content_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/pressed_todo_creationTimestamp_headline_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pressed_todo_content_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/creation_timestamp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/pressed_todo_creationTimestamp_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pressed_todo_creationTimestamp_headline_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/pressed_todo_editTimestamp_headline_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pressed_todo_creationTimestamp_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/edit_timestamp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/pressed_todo_editTimestamp_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/pressed_todo_editTimestamp_headline_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/pressed_todo_mark_undone_btn"
        android:text="@string/mark_as_undone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pressed_todo_editTimestamp_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pressed_todo_delete_btn"
        android:padding="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorApproveBtn"
        android:textColor="#FFF"/>

    <Button
        android:id="@+id/pressed_todo_delete_btn"
        android:text="@string/delete_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pressed_todo_editTimestamp_text_view"
        app:layout_constraintStart_toEndOf="@+id/pressed_todo_mark_undone_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorDeleteBtn"
        android:textColor="#FFF"/>

</androidx.constraintlayout.widget.ConstraintLayout>